--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "dependencies": {
     "@noble/curves": "^2.0.1",
+    "@noble/ed25519": "^3.0.0",
     "@noble/hashes": "^2.0.1"
   },
   "devDependencies": {
