● Add Rust WASM crypto backend with provider pattern for runtime switching
  Phase 1: keccak256 and blake2b compiled from Rust via wasm-pack (23KB).
  Provider pattern enables switching between JS and WASM backends at runtime
  while keeping all existing JS crypto code intact. Equivalence tests confirm
  byte-for-byte matching across all inputs. Benchmarks: keccak256 ~4.6x faster,
  blake2b ~15x faster with WASM backend.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ node_modules/
 build/
 TODO
 
+# Rust/WASM build artifacts
+crates/*/target/
+src/crypto/wasm/package.json
+src/crypto/wasm/*.wasm.d.ts
+
 # Secrets - NEVER commit these
 .env
 .env.*
