--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "./randomx": "./src/randomx/index.js"
   },
   "scripts": {
-    "test": "node test/run.js",
+    "setup": "./setup.sh",
+    "test": "bun test/run.js",
     "build:wasm": "asc assembly/index.ts --outFile build/randomx.wasm --optimize --enable simd --initialMemory 16 --maximumMemory 8192",
     "build:wasm-crypto": "cd crates/salvium-crypto && PATH=\"$HOME/.cargo/bin:$HOME/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin:$PATH\" RUSTUP_HOME=\"$HOME/.rustup\" CARGO_HOME=\"$HOME/.cargo\" RUSTFLAGS=\"-Ctarget-feature=+simd128\" wasm-pack build --target web --out-dir ../../src/crypto/wasm",
     "build:miner": "cd crates/salvium-miner && PATH=\"$HOME/.cargo/bin:$HOME/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin:$PATH\" RUSTUP_HOME=\"$HOME/.rustup\" CARGO_HOME=\"$HOME/.cargo\" cargo build --release",
@@ -74,7 +75,7 @@
     "url": "https://github.com/whiskymine/salvium-js"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "bun": ">=1.0.0"
   },
   "browser": {
     "./src/keccak.js": "./src/keccak.browser.js"
